prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_destructure_array_default_mismatch.diag.txt
ERROR: expression of type 'string' cannot be assigned to type 'int'
testData/diagnostics/compilation_errors/type_inference/test_destructure_array_default_mismatch.nut:4:5

// This CAN be checked at compile time because the default value is known.
let [x: int = "hello"] = [42]
     ^---------------
return x


